# jpeg_encryption

./: .gitignore  CMakeLists.txt  README.md
scripts/: correlation_2_images.py  correlation_coeff.py  entropy.py  histogram_analysis.py  msn_etc.py
src/: chaotic_keystream_generator.cpp  chaotic_keystream_generator.hpp  jpeg.cpp  jpeg.hpp  main.cpp  master_key.hpp
